Fix spacing issues again

--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -4,16 +4,19 @@
 
 .text-center {
   text-align: center;
+  align-items: center;
 }
 
 .img-center {
   justify-content: center;
   text-align: center;
+  align-items: center;
 }
 
 .link {
   color: Aquamarine;
   font-size: 16px;
+  font-family: sans-serif;
 }
 
 .copyright {
